--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
     "hamburger-react": "^2.5.1",
     "lenis": "^1.1.9",
     "lucide-react": "^0.428.0",
-    "next": "14.2.5",
+    "next": "^14.2.8",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
