--- a/package.json
+++ b/package.json
@@ -15,13 +15,16 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@react-three/drei": "^9.111.5",
     "@react-three/fiber": "^8.17.6",
+    "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "gsap": "^3.12.5",
     "hamburger-react": "^2.5.1",
     "lenis": "^1.1.9",
     "lucide-react": "^0.428.0",
+    "mongoose": "^8.6.1",
     "next": "^14.2.8",
+    "next-auth": "^4.24.7",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
@@ -32,6 +35,10 @@
     "three": "^0.168.0"
   },
   "devDependencies": {
+    "@babel/core": "^7.25.2",
+    "@babel/preset-env": "^7.25.4",
+    "@babel/preset-react": "^7.24.7",
+    "@types/bcrypt": "^5.0.2",
     "@types/gsap": "^1.20.2",
     "@types/node": "^20",
     "@types/react": "^18",
