--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@radix-ui/react-slot": "^1.1.0",
     "@react-three/drei": "^9.111.5",
     "@react-three/fiber": "^8.17.6",
+    "@uploadthing/react": "^6.8.0",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
@@ -32,7 +33,8 @@
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
-    "three": "^0.168.0"
+    "three": "^0.168.0",
+    "uploadthing": "^6.13.3"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
