--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@radix-ui/react-dialog": "^1.1.1",
     "@radix-ui/react-select": "^2.1.1",
     "@radix-ui/react-slot": "^1.1.0",
+    "@radix-ui/react-toast": "^1.2.1",
     "@react-three/drei": "^9.111.5",
     "@react-three/fiber": "^8.17.6",
     "@uploadthing/react": "^6.8.0",
@@ -26,6 +27,7 @@
     "mongoose": "^8.6.1",
     "next": "^14.2.8",
     "next-auth": "^4.24.7",
+    "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
