--- a/package.json
+++ b/package.json
@@ -37,7 +37,8 @@
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
     "three": "^0.168.0",
-    "uploadthing": "^6.13.3"
+    "uploadthing": "^6.13.3",
+    "vaul": "^0.9.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
