--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "next": "^14.2.8",
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
+    "nodemailer": "^6.9.15",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
@@ -47,6 +48,7 @@
     "@types/bcrypt": "^5.0.2",
     "@types/gsap": "^1.20.2",
     "@types/node": "^20",
+    "@types/nodemailer": "^6.4.15",
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
