contact api integrated

--- a/package.json
+++ b/package.json
@@ -17,11 +17,14 @@
     "@react-three/drei": "^9.111.5",
     "@react-three/fiber": "^8.17.6",
     "@uploadthing/react": "^6.8.0",
+    "axios": "^1.7.7",
     "bcrypt": "^5.1.1",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
+    "country-state-city": "^3.2.1",
     "gsap": "^3.12.5",
     "hamburger-react": "^2.5.1",
+    "indian-pincodes": "^1.1.0",
     "lenis": "^1.1.9",
     "lucide-react": "^0.428.0",
     "mongoose": "^8.6.1",
