--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "next-auth": "^4.24.7",
     "next-themes": "^0.3.0",
     "react": "^18",
+    "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-loading-skeleton": "^3.4.0",
