--- a/package.json
+++ b/package.json
@@ -38,7 +38,9 @@
     "react-dom": "^18",
     "react-icons": "^5.2.1",
     "react-loading-skeleton": "^3.4.0",
+    "react-simple-star-rating": "^5.1.7",
     "react-slick": "^0.30.2",
+    "react-stars": "^2.2.5",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
@@ -57,6 +59,7 @@
     "@types/react": "^18",
     "@types/react-dom": "^18",
     "@types/react-slick": "^0.23.13",
+    "@types/react-stars": "^2.2.4",
     "eslint": "^8",
     "eslint-config-next": "14.2.5",
     "postcss": "^8",
