--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react-simple-star-rating": "^5.1.7",
     "react-slick": "^0.30.2",
     "react-stars": "^2.2.5",
+    "sharp": "^0.33.5",
     "slick-carousel": "^1.8.1",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
