--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@react-three/fiber": "^8.17.6",
     "@uploadthing/react": "^6.8.0",
     "bcrypt": "^5.1.1",
+    "chart.js": "^4.4.4",
     "class-variance-authority": "^0.7.0",
     "clsx": "^2.1.1",
     "country-state-city": "^3.2.1",
@@ -33,6 +34,7 @@
     "next-themes": "^0.3.0",
     "nodemailer": "^6.9.15",
     "react": "^18",
+    "react-chartjs-2": "^5.2.0",
     "react-countup": "^6.5.3",
     "react-dom": "^18",
     "react-icons": "^5.2.1",
